--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,12 @@ name = Time-localtime
 
 [ReadmeFromPod]
 ; enable = false
-filename = lib/Time/localtime.pm6
+filename = lib/Time/localtime.rakumod
 
 [PruneFiles]
 ; match = ^ 'xt/'
+
+[Badges]
+provider = github-actions/test
+
+[UploadToZef]
